--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,25 @@
 }
 
 #pokedex-container {
-    height: 100%;
+    height: 90%;
+    width: 75%;
     border: 2px solid rgb(146, 0, 0);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-content: flex-start;
+    margin: 0 auto;
+
     /*justify-content: space-evenly;*/
 }
 
 .pokemon-card {
-    flex-shrink: 1;
-    flex-grow: 0;
+    flex: 0 0 auto;
     border: 2px solid rgb(0, 0, 0);
 }
 
 .pokemon-img-card {
+    width: 200px;
+    height: 200px;
     object-fit: scale-down;
 }
